Changes for 1.2.7
* Added new unit attachment, maxBuiltPerPlayer, which limits the number of a unittype that can be built for each player. (veqryn)

* Added history entries for many triggers. (veqryn)

* Updated ui and utilities to allow islands to be selectable if they are inside a sea zone that ends or begins with "Sea Zone". Previously only allowed water territories to end with, not begin with "Sea Zone". (veqryn)

* Updated giveUnits and takeUnits to not throw Java errors for older maps. Not backwards compatible, just ignore it if true or false. (veqryn)

* Dice change: now allows max dice sides to be set in the xml, <diceSides value="6"/>. Defaults to 6 if not present. Can be any number between 1 and 200. This will allow many new types of games to be made. (veqryn and gansito)

* Bug fix in Trigger Attachments Tech change, was disqualifying techs based on attached player instead of aPlayer. (veqryn)

* Redid canBeGivenByTerritoryTo unit attachment to be a colon delimited list of players, who are the players this unit can be given to. Also added a missing toString. (veqryn)

* Completely redid giveUnitControl to be flexible. giveUnitControl and changeUnitOwners are now lists of players to give to, and a new unit attachment, canBeGivenByTerritory, and a new global property, "Give Units By Territory".  
  takeUnitControl is deleted since no longer needed. This will break compatibility with 2 maps, but I have already updated them, so users just have to update their maps after the next version comes out. (veqryn, with some inspiration from rolflarsson)

* New game property, "Triggered Victory", and new trigger option, "victory" value = victory message. Can be based on any condition. (veqryn)

* Dynamix AI patch, various small improvements and logic fixes. (wisconsin)

* New game property, "Low Luck for Technology", which will apply low luck rules to rolling for tech. (veqryn)

* Dynamix AI logging patch, should make logs easier to read. (wisconsin)
