@@ -2051,6 +2051,9 @@
 						 <option name="constructionType" value="airfield"/>
 						 <option name="constructionsPerTerrPerTypePerTurn" value="1"/>
 						 <option name="maxConstructionsPerTypePerTerr" value="1"/>
+						 <!-- destroyedWhenCapturedBy is a list of the players who destroy this non-combat unit instead of capturing it.  all non-combat units are normally captured by default 
+								is a colon delimited list. example: value="Chinese:Russians" -->
+						 <option name="destroyedWhenCapturedBy" value="Chinese"/>
                 </attatchment>
 				
 				<!-- Harbour -->
@@ -2066,6 +2069,7 @@
 						 <option name="constructionType" value="harbour"/>
 						 <option name="constructionsPerTerrPerTypePerTurn" value="1"/>
 						 <option name="maxConstructionsPerTypePerTerr" value="1"/>
+						 <option name="destroyedWhenCapturedBy" value="Chinese"/>
                 </attatchment>
 				
                 <!-- Factory -->
@@ -2078,10 +2082,12 @@
 						 <option name="unitPlacementRestrictions" value="Midway:Greenland:Gibraltar:Solomon Islands:Wake Island:Caroline Islands"/>
 						 <!-- maxBuiltPerPlayer is the number of this unit that can be BUILT by a player.  If they have fewer than this number they can build more, if they have more than this number they can not build more [this does not cause excess ones to disappear] -->
 						 <option name="maxBuiltPerPlayer" value="3"/>
+						 <option name="destroyedWhenCapturedBy" value="Chinese"/>
                 </attatchment>
 
                 <attatchment name="unitAttatchment" attatchTo="factory_hit" javaClass="games.strategy.triplea.attatchments.UnitAttachment" type="unitType">
                          <option name="isFactory" value="true"/>
+						 <option name="destroyedWhenCapturedBy" value="Chinese"/>
                 </attatchment>
 
                 <!-- AA Gun -->
@@ -2089,6 +2095,7 @@
                          <option name="isAA" value="true"/>
                          <option name="transportCost" value="3"/>
                          <option name="movement" value="1"/>
+						 <option name="destroyedWhenCapturedBy" value="Chinese"/>
                 </attatchment>
 				
 				
@@ -3769,6 +3776,11 @@
 
 				<!-- specific rules -->
 				<!-- land related -->
+					<!-- if true, units with destroyedWhenCapturedBy will be destroyed instead of captured. only applies to non-combat units, since combat units die in combat -->
+				<property name="Units Can Be Destroyed Instead Of Captured" value ="true" editable="false">
+						<boolean/>
+				</property>
+				
 					<!-- if true you may have a number of constructions up to the value of the territory, in territories with factories -->
 				<property name="More Constructions with Factory" value="false" editable="true">
 						<boolean/>
@@ -4010,7 +4022,7 @@
 						<br>7. Harbour are needed to repair Battleships, if you turn on "Two HitPoint Units Require Repair Facilities".
 						<br>8. Bunkers may be placed in any territory you owned at the beginning of the turn (just like Factories, Airfields, and Harbours), but there is a limit of 1 per territory.
 						<br>9. New Technologies: reinforcedHulls (gives +2 defense to subs), and wolfPackTactics (gives +1 att, +1 def to subs). Available to Germans after they get superSubs.
-						<br>10. Each nation may only build factories up to 3 total, if a nation controls more than 3 they can not build new factories.
+						<br>10. Each nation may only build factories up to 3 total, if a nation controls more than 3 they can not build new factories (they can keep capturing new ones though).
         				<br>
         				<br>
         				<br>
@@ -4084,6 +4096,7 @@
 							Sinkiang, Central China, China, Manchuria, Kwangtung, French Indochina<br>
 						* No Chinese Units, including the Chinese Fighter may leave Chinese territory: Sinkiang, Central China, China, Manchuria, Kwangtung, French Indochina
 							(this means no entering sea zones)<br>
+						* Chinese destroy any non-combat units they would otherwise capture (factories, aa guns, harbours, airfields)<br>
 						<br>
 						<br>
 						<b>Technology</b><br>
