@@ -199,5 +199,6 @@ public interface Constants
   public static final String LL_TECH_ONLY = "Low Luck for Technology";
   public static final String TRIGGERED_VICTORY = "Triggered Victory";
   public static final String GIVE_UNITS_BY_TERRITORY = "Give Units By Territory";
+  public static final String UNITS_CAN_BE_DESTROYED_INSTEAD_OF_CAPTURED = "Units Can Be Destroyed Instead Of Captured";
   
 }
