@@ -613,11 +613,25 @@ public class BattleTracker implements java.io.Serializable
             changeTracker.addToConquered(territory);
         }
         
+        //destroy any units that should be destroyed on capture
+        if(games.strategy.triplea.Properties.getUnitsCanBeDestroyedInsteadOfCaptured(data))
+        {
+        	CompositeMatch<Unit> enemyToBeDestroyed = new CompositeMatchAnd<Unit>(Matches.enemyUnit(id, data), Matches.UnitDestroyedWhenCapturedBy(id));
+            Collection<Unit> destroyed = territory.getUnits().getMatches(enemyToBeDestroyed);
+            if (!destroyed.isEmpty())
+            {
+                Change destroyUnits = ChangeFactory.removeUnits(territory, destroyed);
+                bridge.getHistoryWriter().addChildToEvent(id.getName() + " destroys some non-combat units");
+                bridge.getHistoryWriter().setRenderingData(destroyUnits);
+                bridge.addChange(destroyUnits);
+                if (changeTracker != null)
+                    changeTracker.addChange(destroyUnits);
+            }
+        }
         
         //take over non combatants
-        CompositeMatch<Unit> enemyNonCom = new CompositeMatchAnd<Unit>();
-        enemyNonCom.add(Matches.UnitIsAAOrFactory);
-        enemyNonCom.add(Matches.enemyUnit(id, data));
+        CompositeMatch<Unit> enemyCapturable = new CompositeMatchOr<Unit>(Matches.UnitIsAAOrFactory, Matches.UnitIsInfrastructure);
+        CompositeMatch<Unit> enemyNonCom = new CompositeMatchAnd<Unit>(Matches.enemyUnit(id, data), enemyCapturable);
         Collection<Unit> nonCom = territory.getUnits().getMatches(enemyNonCom);
         Change noMovementChange = DelegateFinder.moveDelegate(data).markNoMovementChange(nonCom);
         bridge.addChange(noMovementChange);
